fixed text overflow on button issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,6 +23,7 @@ nav {
 #fetch-button {
   background-color: #1c3879;
   border-width: 0px;
+  width: fit-content;
 }
 
 .main-container {
@@ -71,14 +72,8 @@ nav {
   }
 }
 
-@media (max-width: 750px) {
-  #fetch-button {
-
-  }
-}
-
 /*
-to do - fetch commodities button text goes over color, aside overlapping graph happens below 1200px, buttons overlapping
+to do - aside overlapping graph happens below 1200px, buttons overlapping
   nav {
     width: 100%;
   }
